# multimedia-gst-plugin-aml-v4l2dec

./: autogen.sh  configure.ac  gst-plugin-aml-v4l2_1.0.bb
src/: Makefile.am  aml-v4l2-utils.c  aml-v4l2-utils.h  aml_v4l2_calls.c  gstamlv4l2.c  gstamlv4l2allocator.c  gstamlv4l2allocator.h  gstamlv4l2bufferpool.c  gstamlv4l2bufferpool.h  gstamlv4l2object.c  gstamlv4l2object.h  gstamlv4l2videodec.c  gstamlv4l2videodec.h
src/ext/: aml-vdec.h  types-compat.h  v4l2-common.h  v4l2-controls.h  videodev2.h
src/gst/: gst-i18n-plugin.h
